<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/meetup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meetup_title"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/meetup_android_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:theme="@style/RedButton"
        android:text="@string/main_activity_android_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meetup_title" />

    <TextView
        android:id="@+id/meetup_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/meetup_author"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meetup_android_button" />

    <TextView
        android:id="@+id/meetup_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/meetup_description"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meetup_author"
        app:layout_constraintWidth_default="spread" />

    <Button
        android:id="@+id/meetup_all_meetups_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/BlueButton"
        android:layout_marginTop="10dp"
        android:text="@string/main_activity_all_text_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meetup_description" />


</android.support.constraint.ConstraintLayout>