<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/author_circle"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:padding="10dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="author"
            android:src="@drawable/sergey_ryabov" />
    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/author_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/author_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/author_circle"
        app:layout_constraintTop_toTopOf="@id/author_circle" />


    <TextView
        android:id="@+id/author_surname_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/author_surname"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/author_circle"
        app:layout_constraintTop_toBottomOf="@id/author_name_text_view" />

    <TextView
        android:id="@+id/author_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/author_status"
        android:textColor="@color/colorPurpleLitle"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/author_circle"
        app:layout_constraintTop_toBottomOf="@id/author_surname_text_view" />

    <TextView
        android:id="@+id/author_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/author_work"
        app:layout_constraintStart_toEndOf="@id/author_circle"
        app:layout_constraintTop_toBottomOf="@id/author_status" />


    <ImageView
        android:id="@+id/telegram_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/author_telegram"
        android:padding="10dp"
        android:src="@drawable/telegram_icon"
        app:layout_constraintStart_toStartOf="@id/author_work"
        app:layout_constraintTop_toBottomOf="@id/author_work" />

    <ImageView
        android:id="@+id/twitter_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/author_twitter"
        android:padding="10dp"
        android:src="@drawable/twitter_icon"
        app:layout_constraintStart_toEndOf="@+id/telegram_icon"
        app:layout_constraintTop_toBottomOf="@id/author_work" />

    <TextView
        android:id="@+id/author_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/author_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/telegram_icon" />

    <View
        android:id="@+id/grey_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/grey"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/author_description" />

    <TextView
        android:id="@+id/metup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/metup_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/grey_area" />

    <TextView
        android:id="@+id/metup_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/room_1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/metup_title"
        app:layout_constraintTop_toBottomOf="@id/metup_title" />

    <Button
        android:id="@+id/meetup_android_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/main_activity_android_button"
        android:theme="@style/RedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/metup_room" />

    <TextView
        android:id="@+id/metup_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="11:15"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/metup_title"
        app:layout_constraintTop_toBottomOf="@id/meetup_android_button_2" />

    <TextView
        android:id="@+id/metup_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="27 November"
        android:textSize="14sp"
        android:textColor="@color/colorPurpleLitle"
        app:layout_constraintStart_toEndOf="@id/metup_time"
        app:layout_constraintBottom_toBottomOf="@id/metup_time" />


</android.support.constraint.ConstraintLayout>